# blueprint-freertos

./: .gitignore  .gitmodules  .project  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  STM32L496AGIx_FLASH.ld  freertos_blueprint.ioc
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
Application/: cellular_app.c
Application/Config/: cellular_app.h  mbedtls_dtls_config.h  nce_demo_config.h
Application/Demos/include/: coap_demo.h  lwm2m_demo.h  udp_demo.h
Application/Demos/source/: coap_demo.c  lwm2m_demo.c  udp_demo.c
Cellular/: iot_secure_sockets.c
Cellular/CellularBG96/: README.md
Cellular/CellularBG96/source/: cellular_bg96.c  cellular_bg96.h  cellular_bg96_api.c  cellular_bg96_urc_handler.c  cellular_bg96_wrapper.c  cellular_config.h
Cellular/CellularDemo/source/cellular/: cellular_platform.c  cellular_platform.h  comm_if_st.c  device_control.c  iot_fifo.c  iot_fifo.h
Cellular/CellularLibrary/source/: cellular_3gpp_api.c  cellular_3gpp_urc_handler.c  cellular_common.c  cellular_common_api.c  cellular_pkthandler.c  cellular_pktio.c
Cellular/CellularLibrary/source/include/: cellular_config_defaults.h  cellular_types.h
Cellular/CellularLibrary/source/interface/: cellular_comm_interface.h
Cellular/CellularLibrary/test/unit-test/: cellular_common_api_utest.c  cellular_pktio_utest.c
Core/Inc/: FreeRTOSConfig.h  aws_secure_sockets_config.h  gpio.h  iot_config.h  iot_config_common.h  main.h  rng.h  rtc.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usart.h
Core/Src/: freertos.c  gpio.c  main.c  rng.c  rtc.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  syscalls.c  sysmem.c  system_stm32l4xx.c  time.c  usart.c
Drivers/CMSIS/Core/Include/: cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_cm1.h  core_cm35p.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv8.h  tz_context.h
Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  core_armv81mml.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  mpu_armv7.h
Drivers/CMSIS/RTOS/Template/: cmsis_os.h
Drivers/STM32L4xx_HAL_Driver/Inc/: stm32_assert_template.h  stm32l4xx_hal_adc.h  stm32l4xx_hal_adc_ex.h  stm32l4xx_hal_can.h  stm32l4xx_hal_comp.h  stm32l4xx_hal_conf_template.h  stm32l4xx_hal_cortex.h  stm32l4xx_hal_crc.h  stm32l4xx_hal_crc_ex.h  stm32l4xx_hal_cryp.h  stm32l4xx_hal_cryp_ex.h  stm32l4xx_hal_dac.h  stm32l4xx_hal_dac_ex.h  stm32l4xx_hal_dcmi.h  stm32l4xx_hal_def.h  stm32l4xx_hal_dfsdm.h  stm32l4xx_hal_dfsdm_ex.h  stm32l4xx_hal_dma.h  stm32l4xx_hal_dma2d.h  stm32l4xx_hal_dma_ex.h  stm32l4xx_hal_sd.h  stm32l4xx_hal_sd_ex.h  stm32l4xx_hal_smartcard_ex.h  stm32l4xx_ll_usb.h  stm32l4xx_ll_utils.h
Middleware/1nce-iot-c-sdk/source/interface/: log_interface.h
Middleware/1nce_impl/: udp_impl.c  udp_impl.h
Middleware/freertos/abstractions/transport/: transport_secure_sockets.c  transport_secure_sockets.h
Middleware/mbedtls/: .gitignore  .pylintrc  .travis.yml  ChangeLog  LICENSE  Makefile  README.md
Middleware/mbedtls/ChangeLog.d/: 00README.md
Middleware/mbedtls/configs/: config-ccm-psk-tls1_2.h  config-mini-tls1_1.h  config-no-entropy.h  config-suite-b.h  config-thread.h
Middleware/mbedtls/doxygen/: mbedtls.doxyfile
Middleware/mbedtls/doxygen/input/: doc_encdec.h  doc_hashing.h  doc_mainpage.h  doc_rng.h  doc_ssltls.h  doc_tcpip.h  doc_x509.h
Middleware/mbedtls/include/mbedtls/: arc4.h  asn1.h  base64.h  bignum.h  blowfish.h  ccm.h  chachapoly.h  check_config.h  cipher.h  cipher_internal.h  compat-1.3.h  config.h  ctr_drbg.h  debug.h  ecdsa.h  ecjpake.h  ecp.h  entropy.h  error.h  gcm.h  hkdf.h  hmac_drbg.h  md.h  md2.h  md5.h  md_internal.h  memory_buffer_alloc.h  net.h  net_sockets.h  nist_kw.h  oid.h  padlock.h  pem.h  pkcs11.h  pkcs12.h  pkcs5.h  platform_util.h  poly1305.h  ripemd160.h  rsa.h  (+13 more)
Middleware/mbedtls/programs/: wince_main.c
Middleware/mbedtls/programs/aes/: aescrypt2.c  crypt_and_hash.c
Middleware/mbedtls/programs/hash/: generic_sum.c  hello.c
Middleware/mbedtls/programs/pkey/: dh_client.c  dh_genprime.c  dh_server.c  ecdh_curve25519.c  ecdsa.c  gen_key.c  key_app.c  key_app_writer.c  mpi_demo.c  pk_decrypt.c  pk_sign.c  (+9 more)
Middleware/mbedtls/scripts/: abi_check.py  apidoc_full.sh  assemble_changelog.py  bump_version.sh  config.pl  ecc-heap.sh  footprint.sh  generate_errors.pl  generate_features.pl  generate_query_config.pl  generate_visualc_files.pl  massif_max.pl  memory.sh  output_env.sh  rename.pl  tmp_ignore_makefiles.sh
Middleware/mbedtls/tests/: CMakeLists.txt  Makefile  compat.sh  ssl-opt.sh
Middleware/mbedtls_utils/: README.md  mbedtls_error.c  mbedtls_error.h  mbedtls_utils.c
Middleware/wakaama/core/: bootstrap.c  liblwm2m.c  registration.c
Middleware/wakaama/include/: liblwm2m.h
Middleware/wakaama/tests/: senml_json_tests.c  tlv_json_lwm2m_data_test.c
Tools/: energy_saver_template.json
Utilities/Modem_FW/: Flashing_BG96_Board.md
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
demos/: CMakeLists.txt
demos/coap/: iot_demo_coap.c
demos/coreMQTT/: mqtt_demo_connection_sharing.c  mqtt_demo_mutual_auth.c
demos/demo_runner/: aws_demo.c  iot_demo_freertos.c  iot_demo_runner.c
demos/dev_mode_key_provisioning/src/: aws_dev_mode_key_provisioning.c
demos/include/: aws_cellular_demo.h  aws_clientcredential.h  aws_clientcredential_keys.h  aws_demo.h  aws_iot_demo_network.h  aws_test_cellular.h  iot_config_common.h  iot_demo_runner.h
demos/network_manager/: aws_iot_network_manager.c  iot_network_manager_private.h
demos/tcp/: aws_tcp_echo_client_single_task.c
demos/udp/: CMakeLists.txt  iot_demo_udp.c
demos/wakaama/: CMakeLists.txt  iot_demo_wakaama.c
freertos_kernel/portable/Common/: mpu_wrappers.c
libraries/: CMakeLists.txt
libraries/abstractions/transport/: transport_interface.cmake
tests/include/: aws_test_utils.h  iot_config_common.h
tests/integration_test/: core_mqtt_system_test.c  shadow_system_test.c
(+378 files in other folders)
